// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadButton component API clicking should open dropdown 1`] = `
<DownloadButton
  extraItems={
    Array [
      <DropdownItem
        component="button"
      />,
    ]
  }
  onSelect={[Function]}
>
  <Dropdown
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          onClick={[Function]}
          ouiaId="download-csv"
        >
          Export to CSV
        </DropdownItem>,
        <DropdownItem
          component="button"
          onClick={[Function]}
          ouiaId="download-json"
        >
          Export to JSON
        </DropdownItem>,
        <DropdownItem
          component="button"
        />,
      ]
    }
    isOpen={true}
    isPlain={true}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        onToggle={[Function]}
        ouiaId="toggle"
        toggleIndicator={null}
      >
        <ExportIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </DropdownToggle>
    }
  >
    <DropdownWithContext
      autoFocus={true}
      className=""
      direction="down"
      dropdownItems={
        Array [
          <DropdownItem
            component="button"
            onClick={[Function]}
            ouiaId="download-csv"
          >
            Export to CSV
          </DropdownItem>,
          <DropdownItem
            component="button"
            onClick={[Function]}
            ouiaId="download-json"
          >
            Export to JSON
          </DropdownItem>,
          <DropdownItem
            component="button"
          />,
        ]
      }
      isGrouped={false}
      isOpen={true}
      isPlain={true}
      menuAppendTo="inline"
      onSelect={[Function]}
      position="left"
      toggle={
        <DropdownToggle
          onToggle={[Function]}
          ouiaId="toggle"
          toggleIndicator={null}
        >
          <ExportIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
          />
        </DropdownToggle>
      }
    >
      <div
        className="pf-c-dropdown pf-m-expanded"
        data-ouia-component-id="OUIA-Generated-Dropdown-1"
        data-ouia-component-type="PF4/Dropdown"
        data-ouia-safe={true}
      >
        <DropdownToggle
          aria-haspopup={true}
          getMenuRef={[Function]}
          id="pf-dropdown-toggle-id-1"
          isOpen={true}
          isPlain={true}
          key=".0"
          onEnter={[Function]}
          onToggle={[Function]}
          ouiaId="toggle"
          parentRef={
            Object {
              "current": <div
                class="pf-c-dropdown pf-m-expanded"
                data-ouia-component-id="OUIA-Generated-Dropdown-1"
                data-ouia-component-type="PF4/Dropdown"
                data-ouia-safe="true"
              >
                <button
                  aria-expanded="true"
                  aria-haspopup="true"
                  class="pf-c-dropdown__toggle pf-m-plain"
                  data-ouia-component-id="toggle"
                  data-ouia-component-type="PF4/DropdownToggle"
                  data-ouia-safe="true"
                  id="pf-dropdown-toggle-id-1"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M975.8,636.9 L870.9,741.8 L457.9,328.6 C452.1,322.8 445.4,319.9 437.9,319.9 C430.4,319.9 423.7,322.8 417.9,328.6 L328.8,417.7 C323,423.5 320.1,430.2 320.1,437.7 C320.1,445.2 323,451.9 328.8,457.7 L742,870.7 L636.9,975.8 C610.5,1002.2 619.4,1024 656.8,1024 L956,1024 C1014.5,1024 1024,1013.7 1024,955.9 L1024,656.7 C1023.9,619.4 1002.2,610.5 975.8,636.9 Z M128,128 L896,128 L896,361.7 C896.007942,370.182681 899.389907,378.313788 905.4,384.3 L996.7,475.6 C1006.8,485.7 1024,478.5 1024,464.3 L1024,22.7 C1024,16.1 1021.9,10.7 1017.6,6.4 C1013.3,2.1 1007.9,0 1001.3,0 L22.7,0 C16.1,0 10.7,2.1 6.4,6.4 C2.1,10.7 0,16.1 0,22.7 L0,1001.3 C0,1007.9 2.1,1013.3 6.4,1017.6 C10.7,1021.9 16.1,1024 22.7,1024 L463.4,1024 C469.862884,1023.98894 475.684489,1020.0908 478.156232,1014.11925 C480.627976,1008.14769 479.264428,1001.27548 474.7,996.7 L383.4,905.4 C377.413788,899.389907 369.282681,896.007942 360.8,896 L128,896 L128,128 Z"
                      />
                    </svg>
                  </span>
                </button>
                <ul
                  aria-labelledby="pf-dropdown-toggle-id-1"
                  class="pf-c-dropdown__menu"
                  role="menu"
                >
                  <li
                    role="menuitem"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-c-dropdown__menu-item"
                      data-ouia-component-id="download-csv"
                      data-ouia-component-type="PF4/DropdownItem"
                      data-ouia-safe="true"
                      tabindex="-1"
                      type="button"
                    >
                      Export to CSV
                    </button>
                  </li>
                  <li
                    role="menuitem"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-c-dropdown__menu-item"
                      data-ouia-component-id="download-json"
                      data-ouia-component-type="PF4/DropdownItem"
                      data-ouia-safe="true"
                      tabindex="-1"
                      type="button"
                    >
                      Export to JSON
                    </button>
                  </li>
                  <li
                    role="menuitem"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-c-dropdown__menu-item"
                      data-ouia-component-id="OUIA-Generated-DropdownItem-1"
                      data-ouia-component-type="PF4/DropdownItem"
                      data-ouia-safe="true"
                      tabindex="-1"
                      type="button"
                    />
                  </li>
                </ul>
              </div>,
            }
          }
          toggleIndicator={null}
        >
          <Toggle
            aria-haspopup={true}
            bubbleEvent={false}
            className=""
            data-ouia-component-id="toggle"
            data-ouia-component-type="PF4/DropdownToggle"
            data-ouia-safe={true}
            getMenuRef={[Function]}
            id="pf-dropdown-toggle-id-1"
            isActive={false}
            isDisabled={false}
            isOpen={true}
            isPlain={true}
            isPrimary={false}
            isSplitButton={false}
            onEnter={[Function]}
            onToggle={[Function]}
            parentRef={
              Object {
                "current": <div
                  class="pf-c-dropdown pf-m-expanded"
                  data-ouia-component-id="OUIA-Generated-Dropdown-1"
                  data-ouia-component-type="PF4/Dropdown"
                  data-ouia-safe="true"
                >
                  <button
                    aria-expanded="true"
                    aria-haspopup="true"
                    class="pf-c-dropdown__toggle pf-m-plain"
                    data-ouia-component-id="toggle"
                    data-ouia-component-type="PF4/DropdownToggle"
                    data-ouia-safe="true"
                    id="pf-dropdown-toggle-id-1"
                    type="button"
                  >
                    <span>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 1024 1024"
                        width="1em"
                      >
                        <path
                          d="M975.8,636.9 L870.9,741.8 L457.9,328.6 C452.1,322.8 445.4,319.9 437.9,319.9 C430.4,319.9 423.7,322.8 417.9,328.6 L328.8,417.7 C323,423.5 320.1,430.2 320.1,437.7 C320.1,445.2 323,451.9 328.8,457.7 L742,870.7 L636.9,975.8 C610.5,1002.2 619.4,1024 656.8,1024 L956,1024 C1014.5,1024 1024,1013.7 1024,955.9 L1024,656.7 C1023.9,619.4 1002.2,610.5 975.8,636.9 Z M128,128 L896,128 L896,361.7 C896.007942,370.182681 899.389907,378.313788 905.4,384.3 L996.7,475.6 C1006.8,485.7 1024,478.5 1024,464.3 L1024,22.7 C1024,16.1 1021.9,10.7 1017.6,6.4 C1013.3,2.1 1007.9,0 1001.3,0 L22.7,0 C16.1,0 10.7,2.1 6.4,6.4 C2.1,10.7 0,16.1 0,22.7 L0,1001.3 C0,1007.9 2.1,1013.3 6.4,1017.6 C10.7,1021.9 16.1,1024 22.7,1024 L463.4,1024 C469.862884,1023.98894 475.684489,1020.0908 478.156232,1014.11925 C480.627976,1008.14769 479.264428,1001.27548 474.7,996.7 L383.4,905.4 C377.413788,899.389907 369.282681,896.007942 360.8,896 L128,896 L128,128 Z"
                        />
                      </svg>
                    </span>
                  </button>
                  <ul
                    aria-labelledby="pf-dropdown-toggle-id-1"
                    class="pf-c-dropdown__menu"
                    role="menu"
                  >
                    <li
                      role="menuitem"
                    >
                      <button
                        aria-disabled="false"
                        class="pf-c-dropdown__menu-item"
                        data-ouia-component-id="download-csv"
                        data-ouia-component-type="PF4/DropdownItem"
                        data-ouia-safe="true"
                        tabindex="-1"
                        type="button"
                      >
                        Export to CSV
                      </button>
                    </li>
                    <li
                      role="menuitem"
                    >
                      <button
                        aria-disabled="false"
                        class="pf-c-dropdown__menu-item"
                        data-ouia-component-id="download-json"
                        data-ouia-component-type="PF4/DropdownItem"
                        data-ouia-safe="true"
                        tabindex="-1"
                        type="button"
                      >
                        Export to JSON
                      </button>
                    </li>
                    <li
                      role="menuitem"
                    >
                      <button
                        aria-disabled="false"
                        class="pf-c-dropdown__menu-item"
                        data-ouia-component-id="OUIA-Generated-DropdownItem-1"
                        data-ouia-component-type="PF4/DropdownItem"
                        data-ouia-safe="true"
                        tabindex="-1"
                        type="button"
                      />
                    </li>
                  </ul>
                </div>,
              }
            }
          >
            <button
              aria-expanded={true}
              aria-haspopup={true}
              className="pf-c-dropdown__toggle pf-m-plain"
              data-ouia-component-id="toggle"
              data-ouia-component-type="PF4/DropdownToggle"
              data-ouia-safe={true}
              disabled={false}
              id="pf-dropdown-toggle-id-1"
              onClick={[Function]}
              onKeyDown={[Function]}
              type="button"
            >
              <span
                className={null}
              >
                <ExportIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M975.8,636.9 L870.9,741.8 L457.9,328.6 C452.1,322.8 445.4,319.9 437.9,319.9 C430.4,319.9 423.7,322.8 417.9,328.6 L328.8,417.7 C323,423.5 320.1,430.2 320.1,437.7 C320.1,445.2 323,451.9 328.8,457.7 L742,870.7 L636.9,975.8 C610.5,1002.2 619.4,1024 656.8,1024 L956,1024 C1014.5,1024 1024,1013.7 1024,955.9 L1024,656.7 C1023.9,619.4 1002.2,610.5 975.8,636.9 Z M128,128 L896,128 L896,361.7 C896.007942,370.182681 899.389907,378.313788 905.4,384.3 L996.7,475.6 C1006.8,485.7 1024,478.5 1024,464.3 L1024,22.7 C1024,16.1 1021.9,10.7 1017.6,6.4 C1013.3,2.1 1007.9,0 1001.3,0 L22.7,0 C16.1,0 10.7,2.1 6.4,6.4 C2.1,10.7 0,16.1 0,22.7 L0,1001.3 C0,1007.9 2.1,1013.3 6.4,1017.6 C10.7,1021.9 16.1,1024 22.7,1024 L463.4,1024 C469.862884,1023.98894 475.684489,1020.0908 478.156232,1014.11925 C480.627976,1008.14769 479.264428,1001.27548 474.7,996.7 L383.4,905.4 C377.413788,899.389907 369.282681,896.007942 360.8,896 L128,896 L128,128 Z"
                    />
                  </svg>
                </ExportIcon>
              </span>
            </button>
          </Toggle>
        </DropdownToggle>
        <DropdownMenu
          aria-labelledby="pf-dropdown-toggle-id-1"
          autoFocus={false}
          className=""
          component="ul"
          isGrouped={false}
          isOpen={true}
          openedOnEnter={false}
          position="left"
          setMenuComponentRef={[Function]}
        >
          <ul
            aria-labelledby="pf-dropdown-toggle-id-1"
            autoFocus={false}
            className="pf-c-dropdown__menu"
            hidden={false}
            role="menu"
          >
            <DropdownItem
              component="button"
              index={0}
              key=".$download-csv"
              onClick={[Function]}
              ouiaId="download-csv"
            >
              <InternalDropdownItem
                className=""
                component="button"
                context={
                  Object {
                    "keyHandler": [Function],
                    "sendRef": [Function],
                  }
                }
                data-ouia-component-id="download-csv"
                data-ouia-component-type="PF4/DropdownItem"
                data-ouia-safe={true}
                description={null}
                enterTriggersArrowDown={false}
                icon={null}
                index={0}
                inoperableEvents={
                  Array [
                    "onClick",
                    "onKeyPress",
                  ]
                }
                isAriaDisabled={false}
                isDisabled={false}
                isHovered={false}
                isPlainText={false}
                onClick={[Function]}
                role="menuitem"
                styleChildren={true}
                tabIndex={-1}
                tooltipProps={Object {}}
              >
                <li
                  className={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                >
                  <button
                    aria-disabled={false}
                    className="pf-c-dropdown__menu-item"
                    data-ouia-component-id="download-csv"
                    data-ouia-component-type="PF4/DropdownItem"
                    data-ouia-safe={true}
                    tabIndex={-1}
                    type="button"
                  >
                    Export to CSV
                  </button>
                </li>
              </InternalDropdownItem>
            </DropdownItem>
            <DropdownItem
              component="button"
              index={1}
              key=".$download-json"
              onClick={[Function]}
              ouiaId="download-json"
            >
              <InternalDropdownItem
                className=""
                component="button"
                context={
                  Object {
                    "keyHandler": [Function],
                    "sendRef": [Function],
                  }
                }
                data-ouia-component-id="download-json"
                data-ouia-component-type="PF4/DropdownItem"
                data-ouia-safe={true}
                description={null}
                enterTriggersArrowDown={false}
                icon={null}
                index={1}
                inoperableEvents={
                  Array [
                    "onClick",
                    "onKeyPress",
                  ]
                }
                isAriaDisabled={false}
                isDisabled={false}
                isHovered={false}
                isPlainText={false}
                onClick={[Function]}
                role="menuitem"
                styleChildren={true}
                tabIndex={-1}
                tooltipProps={Object {}}
              >
                <li
                  className={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                >
                  <button
                    aria-disabled={false}
                    className="pf-c-dropdown__menu-item"
                    data-ouia-component-id="download-json"
                    data-ouia-component-type="PF4/DropdownItem"
                    data-ouia-safe={true}
                    tabIndex={-1}
                    type="button"
                  >
                    Export to JSON
                  </button>
                </li>
              </InternalDropdownItem>
            </DropdownItem>
            <DropdownItem
              component="button"
              index={2}
              key=".$extra-1"
            >
              <InternalDropdownItem
                className=""
                component="button"
                context={
                  Object {
                    "keyHandler": [Function],
                    "sendRef": [Function],
                  }
                }
                data-ouia-component-id="OUIA-Generated-DropdownItem-1"
                data-ouia-component-type="PF4/DropdownItem"
                data-ouia-safe={true}
                description={null}
                enterTriggersArrowDown={false}
                icon={null}
                index={2}
                inoperableEvents={
                  Array [
                    "onClick",
                    "onKeyPress",
                  ]
                }
                isAriaDisabled={false}
                isDisabled={false}
                isHovered={false}
                isPlainText={false}
                onClick={[Function]}
                role="menuitem"
                styleChildren={true}
                tabIndex={-1}
                tooltipProps={Object {}}
              >
                <li
                  className={null}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="menuitem"
                >
                  <button
                    aria-disabled={false}
                    className="pf-c-dropdown__menu-item"
                    data-ouia-component-id="OUIA-Generated-DropdownItem-1"
                    data-ouia-component-type="PF4/DropdownItem"
                    data-ouia-safe={true}
                    tabIndex={-1}
                    type="button"
                  />
                </li>
              </InternalDropdownItem>
            </DropdownItem>
          </ul>
        </DropdownMenu>
      </div>
    </DropdownWithContext>
  </Dropdown>
</DownloadButton>
`;

exports[`DownloadButton component should render CSV and JSON by default 1`] = `
<Fragment>
  <Dropdown
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          onClick={[Function]}
          ouiaId="download-csv"
        >
          Export to CSV
        </DropdownItem>,
        <DropdownItem
          component="button"
          onClick={[Function]}
          ouiaId="download-json"
        >
          Export to JSON
        </DropdownItem>,
      ]
    }
    isOpen={false}
    isPlain={true}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        onToggle={[Function]}
        ouiaId="toggle"
        toggleIndicator={null}
      >
        <ExportIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </DropdownToggle>
    }
  />
</Fragment>
`;

exports[`DownloadButton component should render custom items 1`] = `
<Fragment>
  <Dropdown
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          onClick={[Function]}
          ouiaId="download-csv"
        >
          Export to CSV
        </DropdownItem>,
        <DropdownItem
          component="button"
          onClick={[Function]}
          ouiaId="download-json"
        >
          Export to JSON
        </DropdownItem>,
        <DropdownItem
          component="button"
        />,
      ]
    }
    isOpen={false}
    isPlain={true}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        onToggle={[Function]}
        ouiaId="toggle"
        toggleIndicator={null}
      >
        <ExportIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </DropdownToggle>
    }
  />
</Fragment>
`;

exports[`DownloadButton component should render disabled 1`] = `
<Fragment>
  <Dropdown
    dropdownItems={
      Array [
        <DropdownItem
          component="button"
          isDisabled={true}
          onClick={[Function]}
          ouiaId="download-csv"
        >
          Export to CSV
        </DropdownItem>,
        <DropdownItem
          component="button"
          isDisabled={true}
          onClick={[Function]}
          ouiaId="download-json"
        >
          Export to JSON
        </DropdownItem>,
        <DropdownItem
          component="button"
        />,
      ]
    }
    isOpen={false}
    isPlain={true}
    onSelect={[Function]}
    toggle={
      <DropdownToggle
        isDisabled={true}
        onToggle={[Function]}
        ouiaId="toggle"
        toggleIndicator={null}
      >
        <ExportIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </DropdownToggle>
    }
  />
</Fragment>
`;
